# Microglia_foundation_model

./: .gitignore  .gitmodules  CLAUDE.md  CONTRIBUTING.md  HISTORY.md  Makefile  PROJECT_PLAN.md  README.md  SETUP.md  mkdocs.yml  pyproject.toml
.github/workflows/: main.yml  release.yml
config/: ablation_study.yml  all_possible_ablations.yaml
docs/: index.md
figures/: plot_results.ipynb
jobs/: activate_conda_env.sh  create_cond_env.sh  finetune.lsf  verify_env.lsf
notebooks/: genelocs.ipynb  generate_gene_embeddings.ipynb  prepare_scprint2.ipynb
notebooks/scPRINT-2-repro-notebooks/: denoising_V2.ipynb  denoising_V3.ipynb  gene_networks.ipynb  output_embeddings.ipynb  smart_seq_class.ipynb
notebooks/scPRINT-2-repro-notebooks/adding-dca/: dca_benchmark.py  dca_job.sh  denoising_benchmark.py  denoising_job.sh
notebooks/scPRINT-2-repro-notebooks/adding-dca/results/: dca_results.json  dca_results_v2.json  plot_with_dca_improvement_ordered.py  step1_prepare_subadata.py  step2_run_dca.py  submit_fix_pancreas.sh  submit_step1.sh  submit_step1_cpu.sh  submit_step2.sh  submit_step2_30593193.sh  submit_step2_dep.sh  submit_step2_dep2.sh
scprint2/: cli.py
scprint2/model/: model.py
scprint2/tasks/: grn.py  impute.py
scprint2/trainer/: trainer.py
scripts/: verify_env.py
slurm/: run_finetune.sbatch
tests/: test_base.py
