[project]
name = "scprint2"
version = "1.0.3"
description = "scPRINT-2 is a Large Cell Model for Gene Network Inference, Denoising and more from scRNAseq data"
authors = [
    {name = "jeremie kalfon", email = "jkobject@gmail.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10, <3.13"
keywords = ["scRNAseq", "transformer", "GRN", "gene regulatory network", "scPRINT-2", "large cell model", "foundation model"]
dependencies = [
    "torch==2.8.0",
    "torchvision>=0.23.0",
    "torchaudio>=0.12.0",
    # torchtext removed: EOL upstream, unused in this codebase, and no aarch64 wheel (arm64 GB10).
    "torchmetrics>=1.6.0",
    "torchdata>=0.7.1",
    "lamindb[gcp]==2.1.1",
    "scDataLoader>=2.1.3",
    "simpler_flash>=1.3.5",
    "GRnnData>=1.3.2",
    "BenGRN>=1.3.2",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "lightning>=2.4.0",
    "pytorch-lightning>=2.5.2",
    "matplotlib==3.9.3",
    "scikit-learn==1.6.0",
    "biomart>=0.9.0",
    "seaborn>=0.11.0",
    "ipykernel>=6.20.0",
    "leidenalg>=0.10.0",
    "scikit-misc>=0.5.0",
    "owlready2>=0.36",
    "huggingface_hub>=0.10.0",
    "scib>=1.1.7",
    "scib-metrics>=0.5.1",
    "scipy>=1.11.0",
    "attridict>=0.0.9",
    "fair-esm>=0.5.0",
    "esm==3.1.4",
    "hydra-core>=1.1.0",
    "pynndescent>=0.5.11",
    "einops>=0.3.0",
    "rich>=10.0.0",
    "typeshed-client>=2.0.0",
    "jsonargparse>=4.0.0,<=4.36.0",
    "docstring-parser>=0.15",
    "wandb>=0.12.0",
    "tensorly>=0.6.0",
    "numba>=0.56.0",
    "sparse>=0.15.4",
    "biopython",
    "future>=1.0.0",
    "jupytext>=1.16.0",
    "torch_geometric>=2.6.0",
    # new restrictions to make it installable in python 3.11
    "urllib3>=1.26.0,<1.27.0",
    "array_api_compat>=1.9.0",
    "bionty>=1.2.1",
    "patsy>=0.5.6",
    "contourpy>=1.3.1",
    "h5py>=3.12.1",
    "gseapy>=1.1.8",
    "d3graph>=2.5.1",
    "gget>=0.29.1",
    "supabase>=2.15.0",
    "s3fs>=2024.10.0",
    "colorcet>=3.1.0",
    "setuptools>=58.0.0,<=75.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "coverage>=7.3.2",
    "ruff>=0.6.4",
    "pytest-cov>=4.1.0",
    "gitchangelog>=3.0.4",
    "mkdocs>=1.5.3",
    "mkdocs-git-revision-date-localized-plugin>=1.0.0",
    "mkdocstrings>=0.22.0",
    "mkdocs-git-authors-plugin>=0.4.0",
    "mkdocs-jupyter>=0.2.0",
    "mkdocstrings-python>=0.10.0",
    "datasets>=3.0.1",
    "datamapplot>=0.4.2",
    "celltypist>=0.1.1",
    "magic-impute>=3.0.0",
    "papermill>=2.5.0",
]

flash = [
    "simpler_flash[flash]>=1.3.5",
]

[project.urls]
repository = "https://github.com/cantinilab/scPRINT-2"

[project.scripts]
scprint2 = "scprint2.__main__:main"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501", "E203", "E266", "E265", "F401", "F403", "E722", "E741", "E731", "E721"]

[tool.hatch.build.targets.sdist]
only-include = [
    "scprint2",
    "slurm",
    "config",
    "data/main/TFs.txt",
]

[tool.hatch.build.targets.wheel]
only-include = [
    "scprint2",
    "slurm",
    "config",
    "data/main/TFs.txt",
]

[tool.uv]
# torchtext: EOL upstream and unused by this codebase, but declared as a transitive
# dep by esm and simpler_flash. No aarch64 wheel exists for a torch-2.8-compatible
# version, so override it to be required only on x86_64 (drops it on arm64/GB10).
override-dependencies = [
    "tokenizers>=0.15,<0.21.0",
    "torchtext; platform_machine == 'x86_64'",
    # Stock torch 2.8 pins triton==3.4.0 (x86-only on PyPI). The cu129 index ships
    # triton 3.3.0 for aarch64, the supported pairing for the cu129 torch build on
    # arm64. On x86_64 the cu129 torch wheel pairs with the regular triton 3.4.0.
    "triton==3.3.0; platform_machine == 'aarch64' and sys_platform == 'linux'",
]

# Both target GPUs are Blackwell and need the CUDA 12.9 torch build, not the
# default PyPI wheel:
#   - GB10 dev box: aarch64; PyPI ships only CPU-only torch 2.8 for arm64.
#   - Minerva: x86_64 NVIDIA B200 (sm_100); stock PyPI x86 torch 2.8 lacks sm_100
#     kernels and fails at runtime.
# Route torch/vision/audio to the cu129 index on BOTH Linux arches. triton only
# needs redirecting on aarch64 (x86 resolves triton 3.4.0 normally from PyPI).
# NOTE: the Minerva conda path installs cu129 torch explicitly via pip in
# jobs/create_cond_env.sh; this block governs `uv` resolution if used there too.
[tool.uv.sources]
torch = [{ index = "pytorch-cu129", marker = "sys_platform == 'linux' and (platform_machine == 'aarch64' or platform_machine == 'x86_64')" }]
torchvision = [{ index = "pytorch-cu129", marker = "sys_platform == 'linux' and (platform_machine == 'aarch64' or platform_machine == 'x86_64')" }]
torchaudio = [{ index = "pytorch-cu129", marker = "sys_platform == 'linux' and (platform_machine == 'aarch64' or platform_machine == 'x86_64')" }]
triton = [{ index = "pytorch-cu129", marker = "platform_machine == 'aarch64' and sys_platform == 'linux'" }]

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


